--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
           <li class="hidden active">
             <a class="page-scroll" href="#page-top"></a>
           </li>
-          <!--li>
+          <li>
             <a href="#aeso20172" class="page-scroll">
               <span class="menu-title">2017.2</span>
               <span class="dot"></span>
             </a>
-          </li-->
+          </li>
           <li>
             <a href="#aeso20171" class="page-scroll">
               <span class="menu-title">2017.1</span>
@@ -48,7 +48,26 @@
         <!-- End: Desc -->
 	  
         <!-- Start: Speakers -->
-        <div class="row me-row content-ct speaker" id="aeso20171">
+		<div class="row me-row content-ct speaker" id="aeso20172">
+          <h2 class="row-title">2017.2</h2>
+          <div class="col-md-6 col-sm-6 feature">
+            <img src="img/SISOP.jpg" class="speaker-img">
+            <h3>Sistemas Operacionais</h3>
+            <!--p>.</p-->
+            <ul class="speaker-social">
+              <li><a href="http://bit.ly/AC-SISOP"><span class="ti-link"></span><span> http://bit.ly/AC-SISOP</span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-sm-6 feature">
+            <img src="img/SEGAS.jpg" class="speaker-img">
+            <h3>Segurança e <br>Auditoria de Sistemas</h3>
+            <!--p>Explica</p-->
+            <ul class="speaker-social">
+              <li><a href="http://bit.ly/AC-SEGAS"><span class="ti-link"></span><span> http://bit.ly/AC-SEGAS</span></a></li>
+            </ul>
+          </div>
+        </div>
+		<div class="row me-row content-ct speaker" id="aeso20171">
           <h2 class="row-title">2017.1</h2>
           <div class="col-md-3 col-sm-6 feature">
             <img src="img/ARQCP.jpg" class="speaker-img">
