--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             <a class="page-scroll" href="#page-top"></a>
           </li>
           <li>
+            <a href="#aeso20182" class="page-scroll">
+              <span class="menu-title">2018.2</span>
+              <span class="dot"></span>
+            </a>
+          </li>
+	  <li>
             <a href="#aeso20172" class="page-scroll">
               <span class="menu-title">2017.2</span>
               <span class="dot"></span>
@@ -48,7 +54,27 @@
         <!-- End: Desc -->
 	  
         <!-- Start: Speakers -->
-		<div class="row me-row content-ct speaker" id="aeso20172">
+		<div class="row me-row content-ct speaker" id="aeso20182">
+          <h2 class="row-title">2018.2</h2>
+          <div class="col-md-6 col-sm-6 feature">
+            <img src="img/SISOP.jpg" class="speaker-img">
+            <h3>Introdução ao Google Classroom</h3>
+            <!--p>.</p-->
+            <ul class="speaker-social">
+              <li><a href="https://drive.google.com/drive/folders/1r4v0cAlwQkGTP0CJXVhd2P7wkyDFSQqF?usp=sharing"><span class="ti-link"></span><span> Apresentação</span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-sm-6 feature">
+            <img src="img/SEGAS.jpg" class="speaker-img">
+            <h3>Segurança e <br>Auditoria de Sistemas</h3>
+            <!--p>Explica</p-->
+            <ul class="speaker-social">
+              <li><a href="http://bit.ly/AC-SEGAS"><span class="ti-link"></span><span> http://bit.ly/AC-SEGAS</span></a></li>
+            </ul>
+          </div>
+        </div>
+	      
+	      <div class="row me-row content-ct speaker" id="aeso20172">
           <h2 class="row-title">2017.2</h2>
           <div class="col-md-6 col-sm-6 feature">
             <img src="img/SISOP.jpg" class="speaker-img">
