--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div class="row me-row content-ct speaker" id="aeso20182">
           <h2 class="row-title">2018.2</h2>
           <div class="col-md-6 col-sm-6 feature">
-            <img src="img/SISOP.jpg" class="speaker-img">
+            <img src="img/CLASSROOM.png" class="speaker-img">
             <h3>Introdução ao Google Classroom</h3>
             <!--p>.</p-->
             <ul class="speaker-social">
